fix: hard to see bullet list markers #11

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -109,6 +109,10 @@
     @apply bg-accent;
   }
 
+  .prose-cody li::marker {
+    @apply text-accent;
+  }
+
   /*
   * ===== END =====
   */
